Revised the Sejin-M-N entry to allow specifying an alternate Sub Device number with Sejin-1 signals
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1374 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -3586,11 +3586,12 @@ Code.HCS08=20 17 22 47 31 83 80 80 03 08 00 00 98 00 00 00 \
 [Sejin-M-N]
 PID=01 61
 VariantName=5
-DevParms=N:38|56,Device:7=16,Sub Device:7=0,Device2:5=2,E:4=0
+DevParms=N:38|56,Device:7=16,Sub Device:7=0,Device2:5=2,Sub Device2:7, E:4=0
 DeviceTranslator=Translator(0,1,39) Translator(1,7,1) Translator(2,7,9) \
-                 Translator(3,6,16,0,-1,comp) Translator(4,4,32)
-CmdParms=Style:Sejin-1|Sejin-2,RMOBC:13=0
-CmdTranslator=Translator(1,8) Translator(1,5,11,8) Translator(0,1,8) Translator(0,1,9)
+                 Translator(3,6,16,0,-1,comp) Translator(4,7,25) Translator(5,4,32)
+CmdParms=Style:Sejin-1|Sejin-2,Sub:0|1,RMOBC:13=0
+CmdParmInit=PickInitializer(1,N2,N4)
+CmdTranslator=Translator(2,8) Translator(2,5,11,8) Translator(0,1,8) Translator(0,1,9) Translator(1,1,10)
 DefaultCmd=00 00
 CmdIndex=0
 FixedData=10 00 F8 00 00
@@ -3602,8 +3603,8 @@ which takes less memory space. E is a checksum seed, E=0 in the only known examp
 Sejin-1 is a normal style of signal corresponding to ordinary buttons on an OEM remote.  Sejin-2 is \
 a signal style that mimics the movement of a pointing device with up to three buttons. \
 \n\n\
-The parameters Device and Sub Device refer to the Sejin-1 signals.  Device2 is the device parameter \
-for the Sejin-2 signals. \
+The parameters Device and Sub Device refer to the Sejin-1 signals. Sub Device2 may be used as an alternate \
+Sub Device with Sejin-1 signals. Device2 is the device parameter for the Sejin-2 signals. \
 \n\n\
 On the Functions page, for Sejin-1 the value for RMOBC is the OBC value for the function (range 0-255) \
 but for Sejin-2 it is an artificial composite value in the range 1-8191 designed simply to create the \
