Revisions to Tivo Executors
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1388 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -4041,59 +4041,53 @@ DefaultCmd=00
 Notes=This is the older version of the Thomson executor, found in a few remotes like the URC-7560.   If you have a decode that is Thomson7, you can use this executor by adjusting: for OBCs less than 64, enter the device number and OBC directly.  For OBCs greater than 63, make a second upgrade and add 32 to the device number and subtract 64 from the OBC. Or, delete this entry from protocols.ini and use the Thomson7 entry instead. 
 Code.740=0F 1D 11 80 0C E0 A2 01 10 06 06 03 97 06 E0 4E 14 17 5A 02 6F 5D 4C 00 FF
 
-[TiVo (Advanced)]
-OldNames=TiVo Hacked,Tivo Hacked,Tivo (Advanced)
-PID=00 41
-CmdTranslator=Translator(lsb,comp)
-CmdParms=OBC=0
-DevParms=Main Device=133,Sub Device=48,Unit Code=0:0|1|2|3|4|5|6|7|8
-FixedData=FF FF FF
-FixedDataMask=FF FF 0F
-DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
-                 Translator(lsb,comp,2,4,20)
-Notes=hacked version
-Code.S3C80=43 8d 31 8b 12 cf 44 08 08 01 1a 01 06 01 1a 03 31 d7 42 11 a7 08 b7 08 05 E4 06 05 60 06 46 06 F0 54 C0 06 f6 01 46 46 29 0d 8d 01 49
+[TiVo (Advanced)] 
+OldNames=TiVo Hacked,Tivo Hacked,Tivo (Advanced) 
+PID=00 41 
+CmdTranslator=Translator(lsb,comp) 
+CmdParms=OBC=0 
+DevParms=Main Device=133,Sub Device=48,Unit Code=0:0|1|2|3|4|5|6|7|8 
+FixedData=FF FF FF 
+FixedDataMask=FF FF F0 
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \ 
+                 Translator(lsb,comp,2,4,16) 
+Notes=obsolete hacked version, which has been retained for compatibility with existing upgrades 
+Code.S3C80=43 8d 31 8b 12 cf 44 08 08 01 1a 01 06 01 1a 03 31 d7 42 11 a7 08 b7 08 05 E4 06 05 60 06 46 06 F0 54 C0 06 f6 01 46 46 29 0d 8d 01 49 
+Code.740=0D 18 31 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B AB 55 06 C7 02 00 01 01 03 E5 A5 60 AA 49 FF 09 F0 25 5F 85 60 86 5F 4C 00 FF 
+Code.6805-C9=0D 19 31 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 B6 5D 97 43 AA F0 B4 5C B7 5D BF 5C CC 01 83 
+
+[TiVo (Official)] 
+OldNames=Tivo (Official) 
+PID=01 11 
+CmdTranslator=Translator(lsb,comp) 
+CmdParms=OBC=0 
+DevParms=Main Device=133,Sub Device=48,Unit Code=0:0|1|2|3|4|5|6|7|8 
+FixedData=FF FF FF 
+FixedDataMask=FF FF F0 
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \ 
+                 Translator(lsb,comp,2,4,16) 
+Notes=This is the preferred protocol executor for JP1.2 and newer remotes 
+Code.S3C80=43 8D 31 8B 15 CA 5D 08 08 01 21 01 06 01 21 03 31 D4 FD 11 A7 08 B7 08 02 08 E4 05 07 56 07 F0 08 06 60 C0 56 C0 0F 44 C0 07 8D 01 46 
+Code.HCS08=20 18 22 48 31 CA 5D 08 08 01 16 01 1A 01 16 03 45 D7 56 11 A6 08 CB 08 02 08 B6 62 A4 F0 B7 64 B6 63 43 A4 0F BA 64 B7 64 CC FF 5F 
+Code.MAXQ610=33 6A 31 0E 15 00 15 00 15 00 3F 00 40 10 55 01 AA 00 00 80 10 16 D4 D2 F0 17 D5 D3 FF 16 D5 D5 0F 05 D4 D5 D4 62 D4 04 70 71 73 74 
 Code.740=0D 18 31 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B AB 55 06 C7 02 00 01 01 03 E5 A5 60 AA 49 FF 09 F0 25 5F 85 60 86 5F 4C 00 FF
-Code.6805-C9=0D 19 31 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 B6 5D 97 43 AA F0 B4 5C B7 5D BF 5C CC 01 83
-Code.HCS08=20 11 00 00 01 84 41 00 05 00 09 13 A4 00 09 1D 4C 3B EC CC FF 5F
 
-[TiVo (Official)]
-OldNames=Tivo (Official)
-PID=01 11
-CmdTranslator=Translator(lsb,comp)
-CmdParms=OBC=0
-DevParms=Main Device=133,Sub Device=48,Unit Code=0:0|1|2|3|4|5|6|7|8
-FixedData=FF FF FF
-FixedDataMask=FF FF F0
-DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
-                 Translator(lsb,comp,2,4,16)
-Notes=hacked version
-Code.S3C80=43 8D 31 8B 15 CA 5D 08 08 01 21 01 06 01 21 03 31 D4 FD 11 A7 08 B7 08 02 08 E4 05 07 56 07 F0 08 06 60 C0 56 C0 0F 44 C0 07 8D 01 46
-Code.740=0D 18 22 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B AB 55 06 C7 02 00 01 01 03 E5 E6 69 4C 00 FF
-Code.6805-C9=0D 19 22 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 CC 01 83
+[TiVo (Official 2-byte)] 
+OldNames=TiVo Official,Tivo Official,Tivo (Official 2-byte) 
+PID=01 11 
+VariantName=2byte 
+CmdTranslator=Translator(lsb,comp,0,8,0) TranslatorFromDev(lsb,comp,2,4,8) 
+CmdParms=OBC=0 
+Notes=official version which was built in to some JP1 and older remotes 
+DevParms=Main Device=133,Sub Device=48,Unit Code=0:0|1|2|3|4|5|6|7|8 
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) 
+FixedData=5E F3 
+DefaultCmd=00 F0 
+CmdIndex=0 
+Code.S3C80=43 8D 22 8B 12 CF 44 08 08 01 1A 01 06 01 1A 03 31 D7 42 11 A7 08 B7 F6 01 46 46 29 0D 8D 01 49       
+Code.740=0D 18 22 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B AB 55 06 C7 02 00 01 01 03 E5 E6 69 4C 00 FF 
+Code.6805-C9=0D 19 22 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 CC 01 83 
 Code.6805-RC16/18=11 24 22 20 10 CF 44 08 08 00 8C 8E 01 8C A3 6B AB 00 84 D3 66 16_7C 10_7C CC 01 B2
-Code.HCS08=20 18 22 48 31 CA 5D 08 08 01 16 01 1A 01 16 03 45 D7 56 11 A6 08 CB 08 02 08 B6 62 A4 F0 B7 64 B6 63 43 A4 0F BA 64 B7 64 CC FF 5F
-Code.MAXQ610=33 6A 31 0E 15 00 15 00 15 00 3F 00 40 10 55 01 AA 00 00 80 10 16 D4 D2 F0 17 D5 D3 FF 16 D5 D5 0F 05 D4 D5 D4 62 D4 04 70 71 73 74
-
-[TiVo (Official 2-byte)]
-OldNames=TiVo Official,Tivo Official,Tivo (Official 2-byte)
-PID=01 11
-VariantName=2byte
-CmdTranslator=Translator(lsb,comp,0,8,0) TranslatorFromDev(lsb,comp,2,4,8)
-CmdParms=OBC=0
-Notes=official version
-DevParms=Main Device=133,Sub Device=48,Unit Code=0:0|1|2|3|4|5|6|7|8
-DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8)
-FixedData=5E F3
-DefaultCmd=00 F0
-CmdIndex=0
-Code.S3C80=43 8D 22 8B 12 CF 44 08 08 01 1A 01 06 01 1A 03 \
-           31 D7 42 11 A7 08 B7 F6 01 46 46 29 0D 8D 01 49
-Code.740=0D 18 22 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B \
-         AB 55 06 C7 02 00 01 01 03 E5 E6 69 4C 00 FF
-Code.6805-C9=0D 19 22 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
-             FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 CC 01 \
-             83
 
 [Velodyne]
 PID=01 35
