Corrects some errors in MAXQ executors
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1408 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1510,7 +1510,7 @@ OBC Groups:\n\
 14 224-239 (E0-EF)\n\
 15 240-255 (F0-FF) 
 Code.S3C80= 3F 84 42 8B 13 86 04 08 08 04 78 00 00 00 00 04 66 11 CB 23 C0 00 00 08 68 08 37 63 05 37 61 07 8B 08 E4 06 04 8B 03 E4 05 04 37 6F 0D 37 6C 13 76 00 01 6B 14 B6 07 36 8B 0F F6 FF 4F B6 07 36 8D E1 D3 F6 FF 57 7B FB AF F6 FF 4F 7B FB AF 6C 03 F6 FF 57 6A FB AF 76 03 80 6B 02 77 71 F6 01 46 F6 01 0A AF
-Code.MAXQ610=30 64 42 0e 5c 00 00 00 00 00 5c 00 6e 01 dc 02 00 00 02 52 c0 81 15 0c 00 d6 d5 00 16 d6 d6 03 53 d7 d1 d6 42 50 03 70 77 74 86 1b 00 00 00 44 36 0c 00 d6 d5 00 16 d6 d6 03 53 d7 d1 d6 43 50 03 02 70 77 74 81 25 0c 00 d6 d5 00 16 d6 d6 03 53 d7 d1 d6 43 40 23 02 70 77 74 c6 40 03 02 00 00 80 70 77 74 04 17 d4 d4 36 00 02 00 01 00
+Code.MAXQ610=30 64 42 0e 5c 00 00 00 00 00 5c 00 6e 01 dc 02 00 00 02 53 c0 81 15 0c 00 d6 d5 00 16 d6 d6 03 53 d7 d1 d6 42 50 03 70 77 74 86 1b 00 00 00 44 36 0c 00 d6 d5 00 16 d6 d6 03 53 d7 d1 d6 43 50 03 02 70 77 74 81 25 0c 00 d6 d5 00 16 d6 d6 03 53 d7 d1 d6 43 40 23 02 70 77 74 c6 40 03 02 00 00 80 70 77 74 04 17 d4 d4 36 00 02 00 01 00
 Code.HCS08=20 16 21 43 42 86 04 08 08 04 77 00 00 00 00 04 78 11 DF 23 B4 00 00 08 02 65 05 00 65 07 20 08 4E 63 61 20 03 4E 62 61 0E 65 0E 0D 65 15 01 B3 17 B6 64 A8 36 B7 64 20 0F AD 12 B6 64 A8 36 B7 64 20 0A AD 11 25 FC 81 AD 03 25 FC 81 6E 03 56 AD 04 3B 56 FB 81 CD FF 5F CD FF 92 81
 
 [MCE]
@@ -1630,7 +1630,7 @@ Notes=Same as Mitsubishi, except a quarter second delay is added after every two
 The second signal has fixed OBC2, and seems to be used for Vol+/- and Ch+/- 
 Code.S3C80=4E A2 52 8B 0E C5 40 08 08 00 96 01 B8 00 96 04 1A 69 00 A6 0D 02 EB 03 E6 0D 06 08 09 68 C0 56 C0 03 87 10 03 19 03 B0 0C F6 01 73 77 F1 B0 C7 77 BD F6 01 70 F6 FF 83 77 BC F6 01 70 F6 01 67 5C 02 C6 F8 D1 C4 F6 01 58 F6 FF 7A 37 6E 05 44 0C 0C EB 18 5A EC C6 F8 3A 7F F6 01 58 F6 01 67 F6 FF 7A 44 0C 0C 6B C6 37 6F 01 AF E4 07 08 B0 C7 77 BD F6 01 46 F6 01 46 AF F6 01 0A 7B 03 46 0C 01 AF 08 D0 A4 D1 C0 7B F9 AF 
 Code.HCS08=20 11 28 52 52 C5 40 08 08 00 95 01 CC 00 95 04 2E 68 F6 B6 B2 A1 02 26 03 6E 06 B2 B6 66 B7 56 A4 03 97 8C E6 60 B7 60 3F 69 CD FF 86 1D AB 1C A2 CD FF 62 CD FF 56 1D A2 CD FF 62 6E 02 55 AD 3B 0F 56 03 00 69 20 45 D1 60 CD FF 74 3B 55 EF 45 3C 8C CD FF 74 45 00 01 CD FF 74 11 25 AD 1C 01 69 CA 0E 56 01 81 4E 64 65 1D AB 1C A2 45 00 01 CD FF 74 11 25 CD FF 5F CC FF 5F CD FF 92 25 02 10 69 81 
-Code.MAXQ610=3B 7A 52 10 0A 00 1E 00 0A 00 46 00 F2 06 0A 00 41 06 28 20 00 80 08 16 D7 D6 03 53 D0 D0 D7 E2 04 22 70 75 0C 56 0C BA 01 16 BA BA FE 5A 1D 00 00 E3 08 82 80 70 75 08 5A 0D 00 00 30 94 C3 0A E3 04 02 01 70 74 08 55 08 D6 80 15 BB BB 01 33 
+Code.MAXQ610=3B 7A 52 10 0A 00 1E 00 0A 00 46 00 F2 06 0A 00 41 06 28 20 00 80 08 16 D7 D6 03 53 D0 D0 D7 E2 04 22 70 75 0C 56 0C BA 01 16 BA BA FE 5A 1D 00 00 E3 08 82 80 70 75 08 5A 0D 00 00 30 94 C3 0A E3 04 02 01 70 74 08 55 08 D6 80 15 BB BB 01
 
 [NEC 2DEV Combo]
 PID=01 1A
@@ -1920,7 +1920,7 @@ DefaultCmd=00 00
 Notes=Combines 6 subdevices for one device.  Allows each function to be specified as NEC1 or NEC2.  This executor can optionally send 2 NEC signals with separately specified subdevices, but the first OBC is a fixed value specified on the Setup tab.  Two signals are requested by specifying a second subdevice.  The second signal will be sent using the OBC entered on the Functions tab. \n\n\ 
 If the 2nd subdevice is entered as "none" then a single signal is sent using the 1st subdevice column and the OBC specified on the Functions tab.
 Code.S3C80=43 8C 82 8B 12 CF 44 08 08 01 21 00 FD 01 21 03 30 D2 DC 11 94 08 B6 E6 10 02 68 0C 08 C6 56 C0 07 87 20 04 08 C6 56 C0 38 E0 C0 E0 C0 E0 C0 87 30 04 39 0C 29 04 F6 FF 61 37 6F 0F 37 6D 06 F6 01 46 46 29 0D 46 29 01 8D 01 49 E4 0A 05 E4 0A 06 60 06 F6 01 46 E4 0C 04 F6 FF 61 37 6D E6 8B DE E4 0B 05 E4 0B 06 60 06 AF
-Code.MAXQ610=33 69 82 0e 16 00 15 00 16 00 3f 00 05 10 56 01 ab 00 02 93 c0 81 12 08 16 c4 d9 07 53 da d1 c4 62 d4 04 70 7a 78 f8 81 12 08 16 c4 d9 07 53 da d1 c4 62 54 04 70 7a 78 f8 81 28 14 16 c4 d9 07 53 da d1 c4 16 c4 d9 38 12 c4 c4 03 53 db d1 c4 62 44 24 70 7a 77 f7 62 44 44 70 7b 78 f8 62 d4 00 80 14 16
+Code.MAXQ610=33 69 82 0E 16 00 15 00 16 00 3F 00 05 10 56 01 AB 00 02 93 C0 81 12 08 16 C4 D9 07 53 DA D1 C4 62 D4 04 70 7A 78 F8 81 12 08 16 C4 D9 07 53 DA D1 C4 62 54 04 70 7A 78 F8 81 28 14 16 C4 D9 07 53 DA D1 C4 16 C4 D9 38 12 C4 C4 03 53 DB D1 C4 62 44 24 70 7A 77 F7 62 44 44 70 7B 78 F8 62 D4 00 80 14 16 C4 D9 07 53 DA D1 C4 16 C4 D7 38 12 C4 C4 03 53 DB D1 C4 62 C4 24 70 7A 77 F7 62 54 04 70 7B 78 F8 
 
 [Nokia Quad]
 PID=00 ED
@@ -2357,7 +2357,7 @@ Code.HCS08=20 03 00 00 01 A6 F4 AE 29 CD FF A1 3B 60 F6 81
 Code.6805-RC16/18=00 00 01 CD 01 8F A6 51 CD 01 95 3A 50 26 F7 81 
 Code.6805-C9=00 00 01 CD 01 92 A6 51 CD 01 9E 3A 50 26 F7 81 
 Code.740=00 00 01 A5 5D A0 50 22 42 16 D0 F9 60
-Code.MAXQ610=78 FF 01 04 00 00 E8 03 00 80 08 5A 00 00 00 58 FC D0 00
+Code.MAXQ610=78 FF 01 04 00 00 E8 03 00 80 08 5A 00 00 00 58 FC D0 00 00
 Notes=This protocol allows you to insert a variable length pause inside \
 a macro.  To use this protocol, you have to install both the Device \
 Upgrade and the Protocol Upgrade.\
@@ -3210,7 +3210,7 @@ DeviceTranslator=Translator(0,1,16,7) Translator(0,1,17,7,comp) \
 FixedData=A9 00 00 00 00 00
 DefaultCmd=00
 Code.HCS08=20 19 24 4B 61 CE 85 40 08 08 00 DD 00 00 00 00 00 DE 0D D3 05 2D 01 C3 04 CD 02 01 61 09 01 B3 06 B6 61 A8 F0 B7 61 03 61 06 55 7B 35 74 1D A4 B6 66 AE 08 CD FF 8C BF 66 B7 67 6E 02 A9 6E 06 AA CC FF 5F
-Code.MAXQ610=35 6F 61 10 10 00 00 00 00 00 10 00 82 13 60 00 20 00 D2 0E 02 13 03 81 12 04 50 D7 D6 D8 62 50 08 70 31 72 73 74 75 77 78 86 17 00 00 00 41 F0 04 50 D7 D6 D8 61 50 08 70 31 72 73 74 75 77 78 81 12 04 50 D7 D6 D8 62 52 08 70 31 72 73 74 75 77 78 86 00 00 00 00 41 F0 04 50 D7 D6 D8 62 52 08 70 31 72 73 74 75 77 78
+Code.MAXQ610=35 6F 61 10 10 00 00 00 00 00 10 00 82 13 60 00 20 00 D2 0E 02 13 03 81 12 04 50 D7 D6 D8 62 50 08 70 31 72 73 74 75 77 78 86 17 00 00 00 41 F0 04 50 D7 D6 D8 62 50 08 70 31 72 73 74 75 77 78 81 12 04 50 D7 D6 D8 62 52 08 70 31 72 73 74 75 77 78 86 00 00 00 00 41 F0 04 50 D7 D6 D8 62 52 08 70 31 72 73 74 75 77 78 
 
 [RCA]
 PID=00 AF
@@ -3280,7 +3280,7 @@ DefaultCmd=00 00
 CmdIndex=0
 Code.S3C80=2C 5C 22 8B 12 95 45 04 08 00 FA 01 E0 00 FA 03 D4 0F 8C 07 D0 07 BC E6 01 02 20 10 08 05 37 00 1E 56 29 FE 68 06 E4 03 06 37 02 03 E4 04 06 F6 01 46 5C 03 C6 F8 9E 2D F6 01 58 5A F7 69 06 8D 01 46
 Code.HCS08=20 15 17 2F 22 95 45 04 08 00 F9 01 F4 00 F9 03 E8 0F A0 07 CF 07 D0 6E 02 AC 3C A9 01 62 20 11 A3 4E 63 69 B6 60 03 62 02 B6 61 B7 63 CD FF 5F 6E 03 56 45 9E 2D CD FF 74 3B 56 F7 4E 69 63 CC FF 5F
-Code.MAXQ610=21 46 22 10 1D 00 39 00 1D 00 72 00 C9 01 E5 00 E5 00 04 38 02 22 01 01 09 42 54 04 32 73 B2 F3 80 08 56 08 D2 02 00 D0 D1 00 42 46 24 32 70 B2 F0 42 46 04 32 73 B2 F3
+Code.MAXQ610=21 46 22 10 1D 00 39 00 1D 00 72 00 C9 01 E5 00 E5 00 04 38 02 21 01 01 09 42 54 04 32 73 B2 F3 80 08 56 08 D2 02 00 D0 D1 00 42 46 24 32 70 B2 F0 42 46 04 32 73 B2 F3
 
 [RCA Combo 57or38]
 PID=01 36
@@ -5490,7 +5490,7 @@ Code.MAXQ610=32 67 11 0E 10 00 41 00 10 00 26 00 B4 12 21 00 5A 00 00 06 00 00 0
 
 [pid: 01 BA]
 PID=01 BA
-Code.MAXQ610=33 69 22 18 16 00 15 00 16 00 40 00 05 10 56 01 AB 00 00 00 56 01 55 00 56 01 5F 00 00 80 08 56 08 D3 80 52 40 44 04 62 44 44 70 71 72 73 62 55 00 00
+Code.MAXQ610=33 69 22 18 16 00 15 00 16 00 40 00 05 10 56 01 AB 00 00 00 56 01 55 00 56 01 5F 00 00 80 08 56 08 D3 80 52 40 44 04 62 44 44 70 71 72 73 62 55 00
 
 [pid: 01 C3]
 PID=01 C3
@@ -5551,7 +5551,7 @@ Code.MAXQ610=35 6F 72 A8 10 04 10 00 10 00 00 00 10 00 10 00 00 00 54 51 60 00 2
 
 [pid: 01 EA]
 PID=01 EA
-Code.MAXQ610=33 69 22 0E 16 00 3F 00 16 00 15 00 05 10 56 01 AB 00 02 32 80 01 09 62 D4 04 72 F2 70 71 00 62 54 04 72 F2 70 71
+Code.MAXQ610=33 69 22 0E 16 00 3F 00 16 00 15 00 05 10 56 01 AB 00 02 31 80 01 09 62 D4 04 72 F2 70 71 00 62 54 04 72 F2 70 71
 
 [pid: 01 EB]
 PID=01 EB
