--- a/protocols.ini
+++ b/protocols.ini
@@ -2688,7 +2688,7 @@ ImportCmdTranslator=Translator(0,2,14) Translator(lsb,comp,1,8,0)
 Notes=For single-style signals, you may select any of the 4 device numbers entered in Device 0, devOBC1, devOBC2, or devOBC3 \n\n\
 For double-style signals, the prefix device number must be entered in Device 0.  Prefix OBCs may be selected from devOBC1 through devOBC4\n\
 The main device number must be entered in DevP2 
-Code.S3C80=40 84 62 8B 14 A5 44 08 08 01 12 00 F0 01 12 03 02 32 B4 10 B0 08 39 00 02 68 0A C0 C6 56 C6 03 7B 08 69 01 46 29 11 8D 01 46 6E 44 0D 0D EB 02 20 0D B0 01 69 10 70 0D F6 01 46 50 0D E6 01 05 E6 10 06 F6 01 46 F6 01 0A 7B E7 AF
+Code.S3C80=40 84 62 8B 14 A5 54 08 08 01 12 00 F0 01 12 03 02 32 B4 10 B0 08 39 00 02 08 0A C0 C0 56 C0 0B 7B 0B 87 10 03 19 03 46 29 01 8D 01 46 87 10 04 19 04 56 29 EF 0C 03 A6 0D 02 EB 02 0C 05 09 0D B0 01 E6 10 01 F6 FF 56 FB 06 F6 FF 50 7B F1 AF E6 01 05 E6 10 06 F6 01 46 8D 01 0A
 Code.HCS08=20 17 21 43 62 A5 54 08 08 01 11 01 04 01 11 03 16 32 C8 10 AF 08 4D 00 02 8C B6 67 44 A4 03 97 00 67 09 E6 60 B7 60 10 A3 CC FF 5F E6 61 B7 61 19 A3 B6 B2 A1 02 27 03 6E 01 B2 3F AC 6E 01 A9 AD E7 6E 05 AC 6E 06 A9 AD DF CD FF 92 25 EC 81																
 
 [Pioneer MIX]
@@ -2707,7 +2707,7 @@ ImportCmdTranslator=Translator(0,2,14) Translator(lsb,comp,1,8,0)
 Notes=For single-style signals, you may select any of the 4 device numbers entered in Device 0, devOBC1, devOBC2, or devOBC3 \n\n\
 For double-style signals, the prefix device number must be entered in Device 0.  Prefix OBCs may be selected from devOBC1 through devOBC4\n\
 The main device number may be selected from devOBC1, devOBC2, devOBC3, devOBC4, or DevP2 
-Code.S3C80=40 84 62 8B 14 A5 55 08 08 01 12 00 F0 01 12 03 02 32 B4 10 B0 08 39 00 02 68 0A C0 C6 56 C6 03 7B 05 69 01 8D 01 46 56 29 EE 6E 44 0D 0D EB 02 20 0D B0 01 69 10 70 0D F6 01 46 50 0D 08 0A 90 C0 F0 C0 56 C0 07 37 05 02 0C 08 26 C0 03 09 01 E6 10 06 F6 01 46 F6 01 0A 7B D7 AF
+Code.S3C80=40 84 62 8B 14 A5 54 08 08 01 12 00 F0 01 12 03 02 32 B4 10 B0 08 39 00 02 08 0A C0 C0 56 C0 03 7B 0B 87 10 03 19 03 46 29 01 8D 01 46 87 60 04 08 0A 37 0A 0C F0 C0 90 C0 56 C0 03 87 10 04 19 08 69 04 56 29 EF 0C 03 A6 0D 02 EB 02 0C 05 09 0D B0 01 E6 10 01 F6 FF 67 FB 06 F6 FF 61 7B F1 AF E6 01 05 E6 10 06 F6 01 46 8D 01 0A
 Code.HCS08=20 17 21 43 62 A5 55 08 08 01 11 01 04 01 11 03 16 32 C8 10 AF 08 4D 00 02 B6 67 A4 07 44 24 2F 6E 44 A3 4C B7 69 3D B2 26 02 3C B2 4F 4E 69 A9 B6 B2 87 AD 1A 86 B7 B2 A6 05 0B 67 07 B6 67 48 62 A4 03 4C 6E 06 A9 AD 06 CD FF 92 25 DE 81 B7 AC CC FF 5F
 Code.MAXQ610=30 64 62 0E 16 00 15 00 16 00 3F 00 10 04 56 01 AA 00 02 71 01 81 17 0C 12 DF D7 01 16 DF DF 03 53 D8 D0 DF 43 54 04 01 78 F8 76 F6 80 24 12 DF D7 01 16 DF DF 03 53 D8 D1 DF 56 10 D7 20 12 DF D7 03 16 DF DF 03 53 D5 D1 DF 55 08 E3 FF 10 E3 00 01 42 44 24 70 F0 78 F8 42 44 64 75 F5 76 F6
 
