Added FixedDataMask=F0 FF FF FF to PID 016C:2  (XMP) UEI has provided a XMP upgrade in the Comcast 1067BC4 remote, in which the second nibble of the fixed data (the checksum C1) is incorrect.  But the executor always computes the checksum, so the value of the second nibble is not significant. This change allows RMIR to correctly recognize PID 0162 ad XMP.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1435 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -4267,6 +4267,7 @@ DeviceTranslator=Translator(1,4,0,4) \
                  Translator(comp,3,1,12) \
                  NibbleSumChk(comp,AF00,4,14)
 FixedData=10 0F 44 3E
+FixedDataMask=F0 FF FF FF
 CmdParms=OBC=0,OBC-2=0
 CmdTranslator=Translator(0,8,0) Translator(1,8,8)
 DefaultCmd=00 00
