- Remove spurious final byte (30) from MAXQ protocol of Panasonic Mixed Combo (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1443 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -2228,7 +2228,7 @@ Code.S3C80=45 91 82 8B 12 8F 45 08 08 00 DA 00 C6 00 DA 02 \
            0C FB 03 83 C1 C2 EB F3 E4 0B 07 E4 05 08 B4 06 \
            08 B4 07 08 E0 10 8D 01 46
 Code.HCS08=20 15 23 4A 82 8F 45 08 08 00 D7 00 DC 00 D7 02 91 90 DD 06 CF 03 68 3F 52 3F 53 8C 39 69 24 0A BE 53 E6 60 BE 52 E7 60 3C 52 3C 53 04 52 05 06 53 02 20 E8 6E 04 A9 4E 68 64 B6 62 B8 63 B8 64 B7 65 CC FF 5F
-Code.MAXQ610=34 6D 82 0E 10 00 10 00 10 00 30 00 AA 0A 80 00 40 00 00 80 40 00 DF D9 00 10 C4 00 D0 10 C5 00 D0 10 DB 00 00 10 DC 00 08 56 18 DF 80 40 C6 C5 00 4C C4 C6 00 13 DB DB 01 55 14 DB 04 13 C4 C4 01 13 C5 C5 01 11 DF DF 01 58 E0 DC 00 07 DA D2 D3 07 DA DA D8 42 54 06 70 71 72 73 78 7A 30
+Code.MAXQ610=34 6D 82 0E 10 00 10 00 10 00 30 00 AA 0A 80 00 40 00 00 80 40 00 DF D9 00 10 C4 00 D0 10 C5 00 D0 10 DB 00 00 10 DC 00 08 56 18 DF 80 40 C6 C5 00 4C C4 C6 00 13 DB DB 01 55 14 DB 04 13 C4 C4 01 13 C5 C5 01 11 DF DF 01 58 E0 DC 00 07 DA D2 D3 07 DA DA D8 42 54 06 70 71 72 73 78 7A
 
 [Panasonic Combo]
 OldNames=Panasonic Combo (Official)
