- Fix protocols.ini bugs in NEC 1or2 SixSubs and Dish Network Combo protocols (Graham) - More on analysis of MAXQ protocols (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1451 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -892,6 +892,7 @@ DeviceImporter=ReorderImporter(4,0,1,2,3)
 CodeTranslator.S3C80=Translator(5,7,193)
 CodeTranslator.6805-RC16/18=Translator(5,7,177)
 CodeTranslator.HCS08=Translator(5,7,193)
+CodeTranslator.MAXQ610=Translator(5,7,393)
 CmdParms=Device:0|1|2|3,OBC:6=0
 CmdParmInit=PickInitializer(0,0,1,n2,n3)
 CmdTranslator=Translator(1,6) Translator(0,2,6)
@@ -1920,7 +1921,7 @@ DefaultCmd=00 00
 Notes=Combines 6 subdevices for one device.  Allows each function to be specified as NEC1 or NEC2.  This executor can optionally send 2 NEC signals with separately specified subdevices, but the first OBC is a fixed value specified on the Setup tab.  Two signals are requested by specifying a second subdevice.  The second signal will be sent using the OBC entered on the Functions tab. \n\n\ 
 If the 2nd subdevice is entered as "none" then a single signal is sent using the 1st subdevice column and the OBC specified on the Functions tab.
 Code.S3C80=43 8C 82 8B 12 CF 44 08 08 01 21 00 FD 01 21 03 30 D2 DC 11 94 08 B6 E6 10 02 68 0C 08 C6 56 C0 07 87 20 04 08 C6 56 C0 38 E0 C0 E0 C0 E0 C0 87 30 04 39 0C 29 04 F6 FF 61 37 6F 0F 37 6D 06 F6 01 46 46 29 0D 46 29 01 8D 01 49 E4 0A 05 E4 0A 06 60 06 F6 01 46 E4 0C 04 F6 FF 61 37 6D E6 8B DE E4 0B 05 E4 0B 06 60 06 AF
-Code.MAXQ610=33 69 82 0E 16 00 15 00 16 00 3F 00 05 10 56 01 AB 00 02 93 C0 81 12 08 16 C4 D9 07 53 DA D1 C4 62 D4 04 70 7A 78 F8 81 12 08 16 C4 D9 07 53 DA D1 C4 62 54 04 70 7A 78 F8 81 28 14 16 C4 D9 07 53 DA D1 C4 16 C4 D9 38 12 C4 C4 03 53 DB D1 C4 62 44 24 70 7A 77 F7 62 44 44 70 7B 78 F8 62 D4 00 80 14 16 C4 D9 07 53 DA D1 C4 16 C4 D7 38 12 C4 C4 03 53 DB D1 C4 62 C4 24 70 7A 77 F7 62 54 04 70 7B 78 F8 
+Code.MAXQ610=33 69 82 0E 16 00 15 00 16 00 3F 00 05 10 56 01 AB 00 02 93 C0 81 12 08 16 C4 D9 07 53 DA D1 C4 62 D4 04 70 7A 78 F8 81 12 08 16 C4 D9 07 53 DA D1 C4 62 54 04 70 7A 78 F8 81 28 14 16 C4 D9 07 53 DA D1 C4 16 C4 D9 38 12 C4 C4 03 53 DB D1 C4 62 44 24 70 7A 77 F7 62 44 44 70 7B 78 F8 62 D4 00 80 14 16 C4 D9 07 53 DA D1 C4 16 C4 D9 38 12 C4 C4 03 53 DB D1 C4 62 C4 24 70 7A 77 F7 62 54 04 70 7B 78 F8 
 
 [Nokia Quad]
 PID=00 ED
