--- a/protocols.ini
+++ b/protocols.ini
@@ -1475,7 +1475,7 @@ DefaultCmd=00 00
 CmdTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8)
 Notes=Use this for a decode of Kaseikyo-M.N  For example, for a decode of Kaseikyo-84.87, device 5.88, OBC=31, G=71, enter 84 as OEM1, 87 as OEM2, \
 5 as Device, 88 as SubDevice, 31 as OBC, and 71 as G \
-Most remotes which this variant of PID 00 FB only offer choices of 20 and 33mS for leadout time. 33mS sends only 40 bits, omitting G from the transmission.
+Most remotes which this variant of PID 00 F8 only offer choices of 20 and 33mS for leadout time. 33mS sends only 40 bits, omitting G from the transmission.
 
 [Kaseikyo]
 PID=00 F8
@@ -3992,13 +3992,13 @@ CmdIndex=1
 
 [Sharp DVD]
 PID=00 F8
-DevParms=Main Device:4,Sub Device
-DeviceTranslator=Translator(lsb,comp,0,8,24,4) Translator(lsb,comp,1,8,32)
+DevParms=Main Device:4=8,Sub Device:8=48
+DeviceTranslator=Translator(lsb,comp,0,4,28) Translator(lsb,comp,1,8,32)
 FixedData=00 aa a5 ff ff
 DefaultCmd=00 00
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb,comp) SharpDVDTranslator()
-Notes=The SharpDVD protocol is equivalent to Kaseikyo with OEM1=170 and OEM2=90.  
+Notes=The SharpDVD protocol is equivalent to Kaseikyo with OEM1=170 and OEM2=90. Most remotes which this variant of PID 00 F8 only offer choices of 20 and 33mS for leadout time
 #Code.S3C80=45 91 52 8B 18 8F 45 08 08 00 DA 00 C6 00 DA 02 7D 27 70 06 D1 03 40 40 F8 92 68 55 26 20 01 08 03 37 03 0E 37 00 1C 56 28 F7 E4 22 1C E4 23 1D 8B 11 37 00 08 E4 26 1C E4 27 1D 8B 06 E4 24 1C E4 25 1D 8D 01 46
 Code.740=0B 1A 52 80 10 E1 72 10 08 08 01 7F 02 94 19 10 80 03 2B 00 08 07 5D 06 E6 5B E6 69 80 0A E6 5B A9 5F 85 71 A9 68 85 72 4C 00 FF
 #Code.6805-RC16/18=11 24 52 20 18 8F 45 08 08 00 63 69 01 63 3A 13 C2 00 31 25 A8 49 3E 20 86 13 28 2A 9D 3C 58 03 5A 0B 00 5A 22 B6_79 B7_64 B6_7A B7_65 01 5A 0A B6_77 B7_6F B6_78 B7_70 17_7B 03 5A 12 B6_75 B7_6F B6_76 B7_70 20 08 A6 2A B7_6F A6 80 B7_70 CC 01 B2
@@ -4007,28 +4007,29 @@ Code.740=0B 1A 52 80 10 E1 72 10 08 08 01 7F 02 94 19 10 80 03 2B 00 08 07 5D 06
 [Sharp DVD]
 PID=00 F8
 VariantName=2
-DevParms=Main Device:4=8,Sub Device:8=48
-DeviceTranslator=Translator(lsb,comp,0,4,28,4) Translator(lsb,comp,1,8,32)
+DevParms=Main Device:4=8,Sub Device:8=48,Leadout(mS):20| |70|44=3
+DeviceTranslator=Translator(2,8,0) Translator(lsb,comp,0,4,28) Translator(lsb,comp,1,8,32)
 FixedData=03 AA A5 0F FF
 DefaultCmd=00 00
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb,comp) SharpDVDTranslator()
-Notes=The SharpDVD protocol is equivalent to Kaseikyo with OEM1=170 and OEM2=90.  
+Notes=The SharpDVD protocol is equivalent to Kaseikyo with OEM1=170 and OEM2=90. Lead-out times of 20, 44 (default), and 70 mSec can be selected.
 #Code.S3C80=43 8B 52 8B 16 8F 45 08 08 00 CB 00 C4 00 CB 02 6A 27 70 06 8F 03 3D 40 F8 8C 8C 20 01 76 03 01 6B 09 E4 22 1C E4 23 1D 56 28 F7 76 03 02 6B 22 E4 24 1C E4 25 1D E6 29 44 E6 0C E8 F6 01 46 F6 01 0A FB 0D 00 0C EB F4 C6 3E 00 00 B0 4A F6 01 0A AF 8D 01 46
 
 [Sharp DVD]
 PID=00 F8
 VariantName=3
-DevParms=Main Device:4=8,Sub Device:8=48
-DeviceTranslator=Translator(lsb,comp,0,4,28,4) Translator(lsb,comp,1,8,32)
+DevParms=Main Device:4=8,Sub Device:8=48,Leadout(mS):20| |70|44=3
+DeviceTranslator=Translator(2,8,0) Translator(lsb,comp,0,4,28) Translator(lsb,comp,1,8,32)
 FixedData=03 AA A5 0F FF                      
 DefaultCmd=00 00
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb,comp) SharpDVDTranslator()
-Notes=The SharpDVD protocol is equivalent to Kaseikyo with OEM1=170 and OEM2=90. 
+Notes=The SharpDVD protocol is equivalent to Kaseikyo with OEM1=170 and OEM2=90. Lead-out times of 20, 44 (default), and 70 mSec can be selected.
 Code.S3C80=45 91 52 8B 18 8F 45 08 08 00 DA 00 C6 00 DA 02 7D 27 70 06 D1 03 40 40 F8 92 68 55 26 20 01 08 03 37 03 0B 37 00 13 56 28 F7 C4 22 1C 8B 0B 37 00 05 C4 26 1C 8B 03 C4 24 1C 8D 01 46
 Code.6805-RC16/18=11 24 52 20 18 8F 45 08 08 00 63 69 01 63 3A 13 C2 00 31 25 A8 49 3E 20 86 13 28 2A 9D 3C 58 03 5A 0B 00 5A 22 B6_79 B7_64 B6_7A B7_65 01 5A 0A B6_77 B7_6F B6_78 B7_70 17_7B 03 5A 12 B6_75 B7_6F B6_76 B7_70 20 08 A6 2A B7_6F A6 80 B7_70 CC 01 B2
 Code.HCS08=20 1B 23 4A 52 8F 45 08 08 00 D5 00 DE 00 D5 02 95 27 84 06 D0 03 54 41 0C 92 7C 55 3A 3C AC B6 60 A4 03 27 0F A1 01 26 02 17 A2 4A 48 8C 97 9E CE 7A 35 74 CC FF 5C
+Code.MAXQ610=34 6D 52 14 10 00 10 00 10 00 30 00 E9 02 81 00 3F 00 CA 04 C9 0A 46 06 02 03 03 01 0B 42 54 06 71 72 73 74 75 76 01 0A 42 56 05 71 72 73 74 75 81 10 04 52 38 40 02 42 54 06 71 72 73 74 75 76 80 04 52 38 42 02 42 54 06 71 72 73 74 75 76
 
 [Somfy]
 PID=01 A1
