Added to notes for RC5 and RC5x entries to show how Philips System/Command/Extension terminology corresponds to JP1 Device/Subdevice/OBC.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1468 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -3168,7 +3168,8 @@ Notes=RC-5 is a quickie combo protocol, allowing you to combine up to three RC-5
 For each Device number position, leave the check box blank to support OBCs from 0 to 63 or mark the check box to support OBCs from 64 to 127. \n\n\
 To access the other 64 OBCs for a given Device number, you will have to use a SECOND of the three available Device number slots on the Setup sheet. \n\n\
 To combine more than three RC5 Device numbers and/or to combine some RC5x Device numbers, use the RC5/5x Combo protocol. \n\n\
-To combine more than three RC5 Device numbers and/or to combine some RC6 Device numbers, use the RC5/6 Combo protocol.
+To combine more than three RC5 Device numbers and/or to combine some RC6 Device numbers, use the RC5/6 Combo protocol. \n\n\
+Some codelists for RC5 use the Philips notation.  "System" = "Device";  "Command" = "OBC" 
 Code.S3C80=40 9A 31 8B 0F C5 81 10 08 06 01 C2 01 A4 01 C2 01 A4 DE 2C 08 06 56 C0 03 09 01 76 00 01 6B 09 87 10 03 B6 C1 20 97 10 03 8D 01 46
 Code.740=0F 19 31 80 0C E0 81 21 20 08 06 02 06 02 05 6F 20 A5 60 29 03 AA B5 5D 17 5A 02 09 20 85 5D 4C 00 FF
 Code.6805-C9=0E 1B 31 20 0C E0 C1 20 20 08 06 02 14 02 0B 72 44 B6 5D A4 03 97 E6 5A B7 5A 01 57 02 1A 5A CC 01 83
@@ -3189,7 +3190,8 @@ DefaultCmd=fc
 CmdParmInit=RC5Initializer()
 Notes=RC-5-38 is a 38kHz version of the RC-5 protocol that operates at 36kHz.  Like that one, it is a quickie combo protocol, allowing you to combine up to three RC-5 Device numbers. However, you will only have access to OBC's 0 - 63 OR 64-127, depending on your checkbox selection on the Setup sheet. \n\n\
 For each Device number position, leave the check box blank to support OBCs from 0 to 63 or mark the check box to support OBCs from 64 to 127. \n\n\
-To access the other 64 OBCs for a given Device number, you will have to use a SECOND of the three available Device number slots on the Setup sheet. A version supporting four RC-5 device numbers at 38kHz, and also offering an alternative frequency of 56kHz, is available as RC-5 Combo.
+To access the other 64 OBCs for a given Device number, you will have to use a SECOND of the three available Device number slots on the Setup sheet. A version supporting four RC-5 device numbers at 38kHz, and also offering an alternative frequency of 56kHz, is available as RC-5 Combo. \n\n\
+Some codelists for RC5 use the Philips notation.  "System" = "Device";  "Command" = "OBC" 
 Code.S3C80=42 8B 31 8B 0F C5 81 10 08 06 01 A4 01 90 01 A4 01 90 D1 B0 08 06 56 C0 03 09 01 76 00 01 6B 09 87 10 03 B6 C1 20 97 10 03 8D 01 46
 Code.HCS08=20 12 22 47 31 C5 81 10 08 06 01 A3 01 A4 01 A3 01 A4 D1 C4 B6 63 A4 03 B7 AC 8C 97 01 B3 06 E6 60 A8 20 E7 60 CC FF 5F
 Code.MAXQ610=32 69 31 8E 00 04 20 00 20 00 00 00 20 00 20 00 00 00 09 10 00 86 00 00 00 00 44 20 08 16 D4 D3 03 53 D4 D0 D4 62 10 02 74 53
@@ -3222,7 +3224,8 @@ CmdParms= Sub Device:7=0,OBC:6=0
 DefaultCmd=ff f0
 CmdIndex=1
 Notes=Can be used to combine multiple Subdevices within the 0-63 or 64-127 bands for a SINGLE RC5x Device.\n\n\
-If you wish to combine RC5x functions with RC5 functions, use the RC5/5x Combo protocol
+If you wish to combine RC5x functions with RC5 functions, use the RC5/5x Combo protocol \n\n\
+Some codelists for RC5x use the Philips notation.  "System" = "Device"; "Command" = "Subdevice"; "Extension" = "OBC"  
 Code.S3C80=40 9A 12 8B 17 89 81 10 08 08 01 BB 01 A8 01 BB 01 A8 94 01 00 00 06 7D 00 00 04 09 76 00 01 6B 03 B6 03 20 77 77 8D 01 46
 Code.740=0C 1C 12 80 0C E9 C0 20 20 08 08 02 07 02 06 03 78 17 5A 02 AF 5D 3C 04 77 2F 5C 3C C0 7E 22 00 3C A8 7E 22 00 A2 78 A0 5D 22 44 4C 03 FF
 Code.6805-C9=0C 1D 12 20 11 C0 C0 20 20 08 08 02 13 02 0A 03 F9 00 00 00 00 04 01 57 06 B6 5A A8 20 B7 5A A6 02 B7 59 A6 C0 B7 7B CD 01 83 A6 A8 B7 7B CD 01 83 A6 5D AE 08 CD 01 9E CD 01 8C 24 E2 81
@@ -3242,7 +3245,8 @@ FixedData=00 1F 1F 1F 1F
 Notes=RC-5 Combo supports the RC-5 protocol at two frequencies, 38kHz and 56kHz, and it allows you to combine up to four RC-5 Device numbers. By comparison the RC-5 executor allows you to combine a maximum of three RC-5 Device numbers and it supports only one frequency, 36kHz.\n\n\
 For each Device number you only have access to OBC's 0 - 63 OR 64-127, depending on your checkbox selection on the Setup sheet. For each Device number position, leave the check box blank to support OBCs from 0 to 63 or mark the check box to support OBCs from 64 to 127. \n\n\
 To access the other 64 OBCs for a given Device number, you will have to use a SECOND of the four available Device number slots on the Setup sheet. \n\n\
-If you need to combine more than four RC5 Device numbers and/or if you would also like to combine some RC6 Device numbers, you may be able to use the RC5/6 Combo protocol that operates at 36kHz.
+If you need to combine more than four RC5 Device numbers and/or if you would also like to combine some RC6 Device numbers, you may be able to use the RC5/6 Combo protocol that operates at 36kHz.  \n\n\
+Some codelists for RC5 use the Philips notation.  "System" = "Device";  "Command" = "OBC" 
 Code.S3C80=43 8b 51 8b 0f 85 81 10 08 06 01 bd 01 ae 01 bd 01 ae ad c0 08 03 37 00 09 e6 0e 2c e6 0f 5d f6 01 55 08 08 56 c0 03 87 10 04 76 00 01 6b 03 b6 c1 20 19 03 8d 01 46
 Code.MAXQ610=33 69 51 9C 00 04 22 00 BD 01 00 00 BD 01 22 00 00 00 D4 AD 32 00 BD 01 00 00 BD 01 32 00 00 00 D4 AD 42 01 01 86 19 00 00 00 47 20 0C 00 D6 D5 00 16 D6 D6 03 53 D7 D1 D6 42 10 02 77 55 86 00 00 00 00 47 20 14 54 22 47 00 52 30 3E 0E 00 D6 D5 00 16 D6 D6 03 53 D7 D1 D6 42 10 02 77 55
 
@@ -3265,7 +3269,8 @@ For each Device number position, leave the check box blank to support OBCs from 
 (To access the other 64 OBCs for a given RC5x Device number, you will have to use a SECOND of the four available Device number slots on the Setup sheet.) \n\n\
 In the functions tab you select the signal type (RC-5 or RC-5x), and enter the OBC.  Then you must use the appropriate columns for that type. \
 For the RC-5 type, use the "RC5 Device" column. \
-For the RC-5x type, you can select any of the four RC5x Devices in the RC5x Device column, and enter the RC5x Sub-Device.
+For the RC-5x type, you can select any of the four RC5x Devices in the RC5x Device column, and enter the RC5x Sub-Device. \n\n\
+Some codelists for RC5 and RC5x use the Philips notation.  "System" = "Device".  For RC5 "Command" = "OBC", while for RC5x "Command" = "Subdevice".  For RC5x, "Extension" = "OBC" 
 Code.S3C80=40 9A 42 8B 17 C8 81 10 00 08 01 C2 01 A4 01 C2 01 A4 DE 2C 00 00 06 C2 94 01 06 00 28 08 37 21 18 E4 07 03 E4 08 04 E6 10 00 28 03 76 00 01 6B 45 B6 C2 20 29 03 8D 01 49 E6 25 09 E6 24 04 E6 28 89 E6 12 08 E4 22 1C E4 23 1D 28 08 37 22 08 37 24 0D E4 06 03 8B 0B 37 24 08 E4 05 03 8B 03 E4 04 03 E4 07 04 E4 08 05 76 00 01 6B 03 B6 03 20 77 77 E6 10 01 8D 01 49
 Code.740=0C 1C 42 80 11 E9 C0 20 20 08 08 02 07 02 06 02 C9 6F 20 00 00 04 17 62 38 3C 01 69 A5 62 4A 29 03 AA B5 5D 85 5D A5 61 85 5E A5 62 85 5F 17 5A 06 A5 5D 49 20 85 5D 3C 04 77 2F 5C 3C C0 7E 22 00 3C A8 7E 22 00 A2 78 A0 5D 22 44 22 06 90 EC 60 3C 06 6C 3C E1 7E 3C 81 7F 3C 21 80 3C 01 69 A5 73 85 71 A5 74 85 72 A5 62 85 5E A5 61 17 5A 02 49 20 85 5D 4C 00 FF 60
 Code.6805-RC16/18=10 27 42 20 15 87 81 10 08 04 00 DE E1 00 DE E1 4A 0A 6E F9 00 00 03 00 84 09 01 5F 22 B6 5F 44 A4 03 97 E6 5A B7 5A 01 57 04 A8 20 B7 5A 3F 58 B6 5E B7 5B B6 5F B7 5C A6 02 B7_66 CC 01 C4 A6 06 B7_68 B6 5E B7 5A B6 5F B7 5B A6 01 B7_66 A6 C5 B7_7B B6_71 B7_6F B6_72 B7_70 01 57 06 B6 5A A8 20 B7 5A CC 01 B2
@@ -3321,7 +3326,8 @@ RC5 functions:  You can combine ANY Device number for RC5 functions (all selecti
 RC6 functions:  You can combine UP TO THREE RC6 devices. On the setup sheet enter the RC6 device codes. \n\n\
 On each row of the functions sheet select either RC5 or RC6 \
 If you select RC5 enter the device and OBC in the 5 dev and 5 OBC columns and ignore garbage in the 6 dev and 6 OBC columns. \
-If you select RC6 select the device in the 6 dev column and enter the OBC in the 6 OBC column and ignore garbage in the 5 dev and 5 OBC columns.
+If you select RC6 select the device in the 6 dev column and enter the OBC in the 6 OBC column and ignore garbage in the 5 dev and 5 OBC columns. \n\n\
+Some codelists for RC5 use the Philips notation.  "System" = "Device";  "Command" = "OBC" 
 Code.S3C80=47 93 82 8B 16 88 81 10 08 08 01 BC 01 A8 01 BC 01 A8 AB CC 05 35 01 A8 04 00 06 08 0C 37 01 0F \
            68 0B 76 00 01 6B 05 B6 C6 20 69 0B 8D 01 49 E6 28 8E E6 29 05 B0 2A B0 C7 2C 14 C6 C0 FF 82 4C \
            0A E3 50 D7 25 2E 4A F9 68 0C 56 C6 06 87 06 05 87 16 06 09 05 19 06 E4 0B 07 68 07 2C 08 CF 10 \
