--- a/protocols.ini
+++ b/protocols.ini
@@ -3347,6 +3347,21 @@ Code.6805-RC16/18=12 25 41 20 11 CE 05 08 08 00 6C 00 00 00 6F 68 00 00 20 92 E8
 Code.HCS08=20 16 24 4B 41 CE 05 08 08 00 D9 00 00 00 00 00 DE CF EC 05 27 01 D1 04 B6 64 AE 08 CD FF 8C BF 64 B7 65 B6 61 01 B3 04 A8 F0 B7 61 6E 02 A9 6E 04 AA CC FF 5F
 Code.MAXQ610=35 6F 41 0E 10 00 00 00 00 00 10 00 11 0F 60 00 20 00 00 86 00 00 00 00 41 F0 04 50 D5 D4 D6 62 50 06 70 31 72 73 75 76
 
+[RC6-M-16]
+PID=00 58
+VariantName=2
+CmdTranslator=Translator()
+CmdParms=OBC=0
+DevParms=Device:8=0, M:3=6
+DeviceTranslator=BitDoubler(0,8,16) \
+                 BitDoubler(1,3,2)
+FixedData=A9 30 55 55
+Code.S3C80=47 93 41 8B 13 CE 05 08 08 00 DE 00 00 00 00 00 CC D0 52 05 35 01 A8 04 68 07 2C 08 CF 10 08 10 07 DF 10 08 10 07 90 C6 FB 03 B6 08 03 2A ED 76 00 01 6B 03 B6 04 F0 E6 10 02 E6 11 04 8D 01 46
+Code.6805-RC16/18=12 25 41 20 11 CE 05 08 08 00 6C 00 00 00 6F 68 00 00 20 92 E8 04 B6 5E AE 08 B7 50 BF 63 48 59 99 49 59 38 50 24 02 A8 03 3A 63 26 F1 BF 5E B7 5F 01 57 06 B6 5B A8 F0 B7 5B 34_66 A6 04 B7 DD CC 01 AF
+Code.HCS08=20 16 24 4B 41 CE 05 08 08 00 D9 00 00 00 00 00 DE CF EC 05 27 01 D1 04 B6 64 AE 08 CD FF 8C BF 64 B7 65 B6 61 01 B3 04 A8 F0 B7 61 6E 02 A9 6E 04 AA CC FF 5F
+Code.MAXQ610=35 6F 41 0E 10 00 00 00 00 00 10 00 11 0F 60 00 20 00 00 86 00 00 00 00 41 F0 04 50 D5 D4 D6 62 50 06 70 31 72 73 75 76
+
+
 [RC5/6 combo]
 PID=01 84
 VariantName=2
