Added PID 0240 as RC6-M-28n, including S3F80 and MAXQ executors. Added a no repeats version of this.  A number of S3F80 executors gleaned from the URC6820 were also added.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1472 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -3361,7 +3361,6 @@ Code.6805-RC16/18=12 25 41 20 11 CE 05 08 08 00 6C 00 00 00 6F 68 00 00 20 92 E8
 Code.HCS08=20 16 24 4B 41 CE 05 08 08 00 D9 00 00 00 00 00 DE CF EC 05 27 01 D1 04 B6 64 AE 08 CD FF 8C BF 64 B7 65 B6 61 01 B3 04 A8 F0 B7 61 6E 02 A9 6E 04 AA CC FF 5F
 Code.MAXQ610=35 6F 41 0E 10 00 00 00 00 00 10 00 11 0F 60 00 20 00 00 86 00 00 00 00 41 F0 04 50 D5 D4 D6 62 50 06 70 31 72 73 75 76
 
-
 [RC5/6 combo]
 PID=01 84
 VariantName=2
@@ -3589,6 +3588,23 @@ FixedData=A9 00 00 00 00 00
 DefaultCmd=00
 Code.HCS08=20 19 24 4B 61 CE 85 40 08 08 00 DD 00 00 00 00 00 DE 0D D3 05 2D 01 C3 04 CD 02 01 61 09 01 B3 06 B6 61 A8 F0 B7 61 03 61 06 55 7B 35 74 1D A4 B6 66 AE 08 CD FF 8C BF 66 B7 67 6E 02 A9 6E 06 AA CC FF 5F
 Code.MAXQ610=35 6F 61 10 10 00 00 00 00 00 10 00 82 13 60 00 20 00 D2 0E 02 13 03 81 12 04 50 D7 D6 D8 62 50 08 70 31 72 73 74 75 77 78 86 17 00 00 00 41 F0 04 50 D7 D6 D8 62 50 08 70 31 72 73 74 75 77 78 81 12 04 50 D7 D6 D8 62 52 08 70 31 72 73 74 75 77 78 86 00 00 00 00 41 F0 04 50 D7 D6 D8 62 52 08 70 31 72 73 74 75 77 78 
+
+#BitExpander(devCmdIndex, numChunksToConvert, destOffset, srcLsbOffset, dstBitsPerChunk, <chunkDefs>)
+[RC6-M-28n]
+PID=02 40
+CmdTranslator=Translator()
+CmdParms=OBC=0
+DevParms=Device:8=0, Sub-Device:12=2074, M:3=6, Freq:36KHz|33.5KHz=0
+DeviceTranslator=BitDoubler(0,8,16) \
+                 BitExpander(1,4,32,8,2,01,02) \
+				 BitExpander(1,8,40,0,2,01,02) \
+                 BitDoubler(2,3,2) \
+				 Translator(comp,3,1,15)
+FixedData=A9 30 55 55 95 56 99
+FixedDataMask=FF 00 FF FF FF FF FF
+Code.S3C80=40 9A 71 8B 07 00 05 35 01 A8 00 DC 08 04 37 00 0D E6 0E 4D E6 0F A0 F6 01 55 0C 08 18 0A 04 0B 0B 10 0A 10 C1 10 0B 20 0B 10 0A 0A F1 1C 12 F6 01 4C C6 F8 00 C8 1C 16 4C 00 F6 FF 58 F6 FF 54 5C 07 F6 FF 58 5A FB C6 F8 E3 8A F6 01 58 F6 01 0A 7B DA AF 6C 04 8B 02 6C 08 87 24 03 10 C2 7B 05 F6 01 58 8B 05 1C 16 F6 01 64 6A F0 4E AF
+#Code.HCS08=
+Code.MAXQ610=35 6F 41 0E 10 00 00 00 00 00 10 00 11 0F 60 00 20 00 00 86 00 00 00 00 41 F0 04 50 D5 D4 D6 62 50 06 70 31 72 73 75 76
 
 [RCA]
 PID=00 AF
@@ -5944,6 +5960,10 @@ Code.MAXQ610=32 69 11 0E 13 00 20 00 13 00 4D 00 D9 00 96 00 96 00 00 80 08 17 D
 PID=02 0B
 Code.MAXQ610=33 69 11 0E 0F 00 26 00 0F 00 13 00 6B 07 98 00 AB 00 00 00 42 54 03 70 71 F1
 
+[pid: 02 14]
+PID=02 14
+Code.S3C80=2d 5e 31 8b 0f 8f 80 10 08 07 00 a0 00 91 00 a0 00 91 ac 91 00 10 68 05 e4 06 05 f6 01 46 f6 01 0a 7b 01 af 46 29 01 69 04 8d 01 46
+
 [pid: 02 15]
 PID=02 15
 Code.MAXQ610=33 69 22 0E 0F 00 13 00 0F 00 26 00 6B 07 98 00 AB 00 00 00 42 54 04 70 71 72 73
@@ -5953,10 +5973,42 @@ PID=02 22
 Code.S3C80=47 93 61 8B 15 8E 04 08 08 00 DE 00 00 00 00 00 CC 3A 07 05 35 01 A8 04 88 42 56 09 7F 2C 08 38 09 CF 10 0A 10 09 DF 10 0A 10 09 90 C3 FB 03 B6 0A 03 2A ED E6 10 02 E6 11 06 76 04 01 6B 18 E4 23 1C E4 24 1D F6 01 46 F6 01 0A 7B 01 AF 46 29 01 B6 09 C0 8D 01 46 F6 FF 66 7B 01 AF B6 09 C0 F6 FF 66 7B F8 AF F6 01 46 6C 07 F6 01 7C C6 F8 3A 1B F6 01 58 6A F4 F6 01 0A AF
 Code.MAXQ610=35 6F 61 10 10 00 00 00 00 00 10 00 9B 21 60 00 20 00 DB 09 00 80 18 16 D6 D6 7F 50 D7 D6 D8 15 D6 D6 80 50 D9 D6 DA 56 08 D1 01 20 38 3E 00 42 40 48 70 31 72 73 74 75 77 78 42 50 08 70 31 72 73 74 75 79 7A
 
+[pid: 02 24]
+PID=02 24
+Code.S3C80=43 8c 41 8b 13 cf c5 40 08 08 01 21 03 30 01 21 00 fd 09 28 11 94 08 b6 20 11 e4 07 08 60 08 8d 01 46 
+
+[pid: 02 25]
+PID=02 25
+Code.S3C80=43 8b 32 8b 12 c7 45 08 04 00 fa 02 da 00 fa 00 e6 ea 4c 08 ca 08 b6 f0 05 0c 04 10 07 10 06 10 05 0a f8 20 10 e6 25 11 8d 01 61 
+
+[pid: 02 28]
+PID=02 28
+Code.S3C80=43 8b 42 8b 19 cf cc 80 20 08 08 00 d2 02 30 00 d2 00 c8 bf 54 06 68 03 a2 00 06 77 61 94 f6 01 46 f6 01 0a 7b 01 af 0c 23 1c d2 2c 02 f6 01 5b 0c d4 d6 c0 00 0e d6 c0 b4 46 29 01 8d 01 46 
+
+[pid: 02 2A]
+PID=02 2A
+Code.S3C80=42 8a 11 8b 12 cd 45 08 08 01 04 02 c6 01 04 00 d6 c4 70 0f a0 07 bc e4 04 05 e4 04 06 60 06 08 03 60 c0 f0 c0 09 07 09 04 1c 04 10 07 10 06 10 05 10 04 1a f6 e6 11 03 8d 01 46 
+
+[pid: 02 2B]
+PID=02 2B
+Code.S3C80=47 93 03 8b 17 c5 81 10 08 06 01 bc 01 a8 01 bc 01 a8 de 2c 00 00 06 e0 00 00 06 09 76 00 01 6b 03 b6 03 20 20 10 76 05 01 eb 03 8d 01 46 e6 28 c9 77 77 8d 01 46 
+
+[pid: 02 32]
+PID=02 32
+Code.S3C80=40 84 23 8b 14 a5 55 08 08 01 12 03 02 01 12 00 f0 32 b4 10 b0 08 39 00 02 08 03 f0 c0 56 c0 0f 18 c0 08 05 56 c0 f0 42 10 08 04 f0 c0 56 c0 0f 28 c0 08 05 f0 c0 56 c0 f0 42 20 19 03 29 04 e4 06 05 a2 12 eb 08 a4 07 06 eb 03 8d 01 46 e6 29 44 a6 0d 02 9b 03 e6 0d 01 b0 01 e6 10 03 f6 01 46 f6 01 7c e6 01 01 e6 10 04 f6 01 46 f6 01 0a 7b e7 af 
+
 [pid: 02 3A]
 PID=02 3A
 Code.MAXQ610=33 69 31 0E 16 00 3F 00 16 00 15 00 05 10 AB 00 AB 00 00 00 62 54 05 70 71 73 F3 32
 
+[pid: 02 3E]
+PID=02 3E
+Code.S3C80=43 8d 21 8b 15 cf cd 00 08 08 01 21 03 35 01 21 01 01 d2 dc 11 ad 08 c2 ee 10 68 05 56 05 fe e4 05 06 60 06 20 11 37 61 03 8d 01 46 e4 22 1c e4 23 1d e6 29 c5 e6 2a 40 8d 01 49 
+ 
+[pid: 02 47]
+PID=02 47
+Code.S3C80=43 8b 73 8b 12 cf 4d 08 08 01 21 00 fd 01 21 03 30 d2 dc 11 94 08 b6 e6 10 02 00 11 68 0c 08 c6 56 c0 07 87 20 04 29 04 e4 0a 05 e4 0b 06 37 6d 03 8d 01 46 e6 29 45 8d 01 49 
+ 
 [pid: 02 4C]
 PID=02 4C
 Code.S3C80=47 93 22 8B 16 88 81 10 08 08 01 BC 01 A8 01 BC 01 A8 AB CC 05 35 01 A8 04 00 06 08 05 37 0F 0D 76 00 01 6B 05 B6 C0 20 09 05 8D 01 49 56 05 7F E6 28 8E E6 29 05 B0 2A B0 C7 2C 14 C6 C0 FF 86 4C 0A E3 50 D7 25 2E 4A F9 E4 05 0B E4 06 0C 68 0B F6 FF 70 E4 07 05 E4 08 06 68 0C F6 FF 70 76 00 01 6B 03 B6 04 F0 E6 10 02 E6 11 04 8D 01 49 2C 08 CF 10 08 10 07 DF 10 08 10 07 90 C6 FB 03 B6 08 03 2A ED AF 00 DE 00 00 00 00 00 CC A3 91
@@ -5965,6 +6017,10 @@ Code.MAXQ610=35 6F 22 A0 00 04 20 00 20 00 00 00 20 00 20 00 00 00 6D 0C 60 00 2
 [pid: 02 5A]
 PID=02 5A
 Code.MAXQ610=33 69 13 98 00 05 16 00 16 00 16 00 2C 00 2C 00 16 00 2C 00 2C 00 46 0B 58 00 16 00 BE 04 00 04 00 00 00 01 C6 54 04 00 00 00 80 10 71 72 73 0C 56 0C D3 01 15 95 95 02 16 D3 D3 FE
+
+[pid: 02 7C]
+PID=02 7C
+Code.S3C80=47 94 43 8b 18 80 00 00 54 00 77 00 54 00 ca 00 54 01 1d 00 54 01 71 00 d0 00 77 b0 82 76 09 80 eb 19 76 00 01 6b 03 b6 07 80 76 09 40 6b 12 6c 04 f6 e9 3f f6 01 7c 6a f8 8b 06 e4 05 03 e4 06 04 f6 e9 3f f6 01 7c f6 e9 3f f6 01 0a 7b f8 76 09 80 eb 01 af b0 07 b0 08 1c 22 f6 01 4c 38 03 f6 e9 62 38 04 f6 e9 62 38 07 f6 e9 62 38 08 f6 e9 62 1c 12 f6 01 4c 1c 26 8d 01 6d 5c 04 90 c3 90 c3 08 c3 56 c0 03 86 04 c0 06 c1 12 f6 01 4c 5a ec af ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff 
 
 
 #The executors that follow are Slingbox no-repeat variants that are loaded by RM or RMIR only when the item "Show Slingbox protocols"
@@ -6073,6 +6129,21 @@ DeviceTranslator=BitDoubler(0,3,2) \
 CmdParms=OBC=0
 CmdTranslator=Translator()
 Code.S3C80=47 93 61 8B 12 87 04 08 04 00 DE 00 00 00 00 00 CA D4 44 05 35 01 A8 0C 0A 18 07 02 11 10 08 10 07 10 09 10 C1 1E 10 08 10 07 0A EF 19 09 8D 01 46
+
+[RC6-M-28n (no repeats)]
+PID=02 40
+VariantName=slingbox
+CmdTranslator=Translator()
+CmdParms=OBC=0
+DevParms=Device:8=0, Sub-Device:12=2074, M:3=6, Freq:36KHz|33.5KHz=0
+DeviceTranslator=BitDoubler(0,8,16) \
+                 BitExpander(1,4,32,8,2,01,02) \
+				 BitExpander(1,8,40,0,2,01,02) \
+                 BitDoubler(2,3,2) \
+				 Translator(comp,3,1,15)
+FixedData=A9 30 55 55 95 56 99
+FixedDataMask=FF 00 FF FF FF FF FF
+Code.S3C80=40 9A 71 8B 07 00 05 35 01 A8 00 DC 08 04 37 00 0D E6 0E 4D E6 0F A0 F6 01 55 0C 08 18 0A 04 0B 0B 10 0A 10 C1 10 0B 20 0B 10 0A 0A F1 1C 12 F6 01 4C C6 F8 00 C8 1C 16 4C 00 F6 FF 53 F6 FF 4F 5C 07 F6 FF 53 5A FB C6 F8 E3 8A F6 01 58 AF 6C 04 8B 02 6C 08 87 24 03 10 C2 7B 05 F6 01 58 8B 05 1C 16 F6 01 64 6A F0 4E AF
 
 [TDC (no repeats)]
 PID=01 EE
