--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="lib" path="lib/TableLayout.jar"/>
 	<classpathentry kind="lib" path="lib/l2fprod-common-directorychooser.jar"/>
 	<classpathentry kind="lib" path="lib/ExtInstall.jar"/>
-        <classpathentry kind="lib" path="lib/hidapi-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/hidapi-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.4.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
