- Include new file linux_xsight.rules in distribution for use in Linux systems (Graham, mdavej, Barf) - Fix bug causing the ModeName special function not to work correctly (Graham) - Update ReadMe to specify need for Java 7 rather than Java 6 and to explain the linux_xsight.rules file (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1493 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/build.xml
+++ b/build.xml
@@ -77,7 +77,7 @@
 			<zipfileset src="${src}/DecodeIR_245.zip" includes="**/libDecodeIR.so,**/libDecodeIR.jnilib" filemode="755"/>
 			<zipfileset src="${src}/DecodeIR_245.zip" includes="**/DecodeIR.dll,DecodeIR.html,Docs/*.txt" filemode="555"/>
           	<zipfileset src="${src}/RdfAndImages.zip" includes="**/*" defaultexcludes="no"/>
-            <zipfileset dir="${src}" includes="Setup.sh" filemode="755" />
+            <zipfileset dir="${src}" includes="Setup.sh,linux_xsight.rules" filemode="755" />
 			<!-- Tutorial is now on the wiki
           	<zipfileset dir="${src}" includes="tutorial.htm" />
             <zipfileset dir="tutorial_files" includes="**/*" prefix="tutorial_files" />
