- At the request of Bengt Martensson (Barf), I have added the entry [ImportOnly] to the end of protocols.ini (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1501 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -6406,3 +6406,20 @@ CmdParms=OBC:8=0
 DefaultCmd=00 
 CmdTranslator=Translator(0,8) 
 Code.S3C80=2C 5F 31 8B 17 87 94 10 08 08 00 A5 00 91 00 A5 00 91 99 84 01 4A 00 00 05 00 03 DE 76 04 80 EB 09 E6 0E 46 E6 0F 94 F6 01 55 56 04 7F E4 05 C2 E4 C2 C3 E4 06 05 04 06 C3 F0 06 04 06 C3 56 C3 0F 56 C2 F0 44 C2 C3 E4 C3 06 46 04 80 B6 06 08 E6 C1 22 F6 01 4C F6 01 46 AF
+
+# The following entry is to permit a user to import IrScrutinizer rmdu exports.
+# See this thread: 
+#   http://www.hifi-remote.com/forums/viewtopic.php?t=17123
+# for a discussion of its use.
+[ImportOnly] 
+PID=99 99 
+DevParms=Device:8=0,Sub Device:8=0 
+DeviceTranslator=Translator() 
+CmdParms=OBC:16=0 
+DefaultCmd=00 
+CmdTranslator=Translator() 
+Notes=This is a trival dummy executor (protocol), intended to import third-party incomplete \
+device updates, allowing the user to manually fix it up. It will preserve Device, Sub Device, \
+and OBC.\n\nThe user must select a usable protocol instead of this one. First please check \
+Options -> "Allow preserve Control", and then select "Preserve: OBC and function parameters" \
+on the "Setup" pane.
