--- a/protocols.ini
+++ b/protocols.ini
@@ -1428,7 +1428,7 @@ on the Setup page.  It is what is shown for new functions.  Once you complete th
 to display the default value.  If you explicitly select the blank value from the drop-down list, it will leave \
 the current value unchanged.  Please note that changing between the two available device codes will also change \
 the OBC.  You may, of course, then change the OBC back to its previous value without affecting the new device code.
-Code.S3C80=47 95 11 8B 13 00 01 97 05 C8 02 A1 01 29 02 4E 00 DB 02 2A 03 7A 04 6A 76 00 01 6B 03 B6 03 40 1C 12 F6 01 4C 1E F6 01 64 38 03 5C 01 F6 7D 57 48 C3 38 04 5C 04 F6 7D 57 38 C4 5C 03 F6 7D 57 C6 F8 70 26 F6 01 58 F6 01 0A 7B D4 AF 90 C3 7B 16 90 C3 7B 0C 1C 22 F6 01 6D 1C 1A F6 01 64 8B 1C 1C 1E 6C 1E 8B 0E 90 C3 7B 06 1C 1C 6C 20 8B 04 1C 20 6C 1C F6 7D 8A 18 C6 F6 7D 8A 5A CE AF F6 01 6D 1C 18 8D 01 64
+Code.S3C80=47 95 11 8B 13 00 01 97 05 C8 02 A1 01 29 02 4E 00 DB 02 2A 03 7A 04 6A 76 00 01 6B 03 B6 03 40 1C 12 F6 01 4C 1E F6 01 64 38 03 5C 01 F6 FF 4D 48 C3 38 04 5C 04 F6 FF 4D 38 C4 5C 03 F6 FF 4D C6 F8 70 26 F6 01 58 F6 01 0A 7B D4 AF 90 C3 7B 16 90 C3 7B 0C 1C 22 F6 01 6D 1C 1A F6 01 64 8B 1C 1C 1E 6C 1E 8B 0E 90 C3 7B 06 1C 1C 6C 20 8B 04 1C 20 6C 1C F6 FF 80 18 C6 F6 FF 80 5A CE AF F6 01 6D 1C 18 8D 01 64																			
 Code.HCS08=20 18 24 4C 11 00 01 89 05 F7 02 93 00 FC 01 1A 02 4C 02 3F 03 9C 00 00 04 8B 01 B3 06 B6 60 A8 40 B7 60 AE 6A CD FF 65 AE 6E CD FF 68 4E 60 53 6E 01 55 AD 1F 4E 53 54 4E 61 53 6E 04 55 AD 14 4E 54 53 6E 03 55 AD 0C 45 70 26 CD FF 74 CD FF 92 25 D0 81 0E 53 19 0C 53 0C AE 7C CD FF 83 AE 76 CD FF 68 20 1F AE 74 AD 23 AE 74 AD 1F 20 15 0C 53 0A AE 70 AD 16 AE 78 AD 12 20 08 AE 78 AD 0C AE 70 AD 08 39 53 39 53 3B 55 C8 81 CD FF 83 AE 72 CD FF 68 81
 Code.MAXQ610=36 70 11 16 1D 00 DC 05 30 00 00 00 26 70 15 00 2A 00 EF 00 3F 02 8F 03 7E 04 C0 80 08 56 08 E0 01 17 D0 D0 40 02 10 00 4E 8D 89 8D 01 08 18 4E D0 3F 43 3D 8A 8A C0 0B 00 1A 00 2B 0A 89 D1 3F 3C 3D 8A 8A FF 0B 00 1A CA 8A CA 8A 89 AA 00 2B 0A 89 D0 3F 32 3D 3F 1A 89 AA 00 2B 0A 89 08 6D 1C 4E 55 3F 18 0A 2B 3D 07 09 2B 3D 55 3F 19 0A 26 3D 08 09 26 3D 55 3F 1A 0A 21 3D 07 09 21 3D 89 8A 5A 8A 0A 2C 5A 8A 04 2C 00 2B 0A 89 1B 3D 0D 0C 00 2B 0A 89 21 3D 09 0C 5A 8A 04 2C 00 2B 0A 89 2F 3D 03 0C 00 2B 0A 89 3F 3D E9 4D 05 09 08 3D 00 2B 0D 89 0D CE 0D 8C 01 0B 2B 0C 01 0B 25 0C 01 0B 35 0C 55 3F 22 0A F9 3D 08 09 F9 3D 55 3F 1E 0A F4 3D 07 09 F4 0C 55 3F 20 0A EF 3D 08 09 EF 3D 55 3F 1D 0A EA 3D 07 09 EA 3D 55 3F 20 0A E5 3D 08 09 E5 3D 55 3F 1D 0A E0 3D 07 09 E0 0C 55 3F 1F 0A DB 3D 08 09 DB 3D 55 3F 1D 0A D6 3D 07 09 D6 3D 55 3F 21 0A D1 3D 08 09 D1 3D 55 3F 1D 0A CC 3D 07 09 CC 0C 55 3F 21 0A C7 3D 08 09 C7 3D 55 3F 1D 0A C2 3D 07 09 C2 3D 55 3F 1F 0A BD 3D 08 09 BD 3D 55 3F 1D 0A B8 3D 07 09 B8 0C
 Code.TI2541=01 1B 01 21 11 96 00 40 14 00 00 00 00 00 14 00 D0 07 1C 00 69 00 30 00 00 00 0C 24 44 14 00 86 00 00 00 00 40 40 38 10 30 00 05 30 2E 06 04 00 11 03 00 59 0C 00 00 30 2E 04 03 00 11 02 00 02 10 11 2E 16 10 10 03 53 10 D2 10 4C 30 10 00 13 30 30 01 14 2E 2E 02 58 E8 2F 00 5D 00 00 00 C2 50 08 52 53 54 55 56 57 58 59 10 10 30 00 6C 30 2E 06 01 00 11 02 00 59 C8 00 00
@@ -1445,6 +1445,7 @@ Code.S3C80= 3D 90 02 8B 15 88 25 08 08 03 0C 00 F0 01 04 02 \
 
 [Hamlin]
 PID=00 29
+OldNames=pid: 00 29
 Code.S3C80=52 C2 11 8B 0D 05 04 08 05 D9 00 00 00 00 05 C7 17 7A 60 03 60 04 F6 01 46 F6 01 46 F6 01 04 FB 0C C6 F8 AE 86 F6 01 58 F6 01 0A 7B E9 AF
 Code.740=10 26 11 80 0C 94 C0 10 55 04 08 00 00 04 D4 0E 5E 22 00 22 00 A2 D0 A0 75 22 44 22 09 B0 03 4C 03 FF 60
 Code.6805-C9=10 27 11 20 0C 94 C0 10 55 04 08 04 D1 04 44 0E 6C CD 01 83 CD 01 83 A6 6D AE 5B CD 01 9E CD 01 86 25 05 CD 01 8C 24 E9 81
@@ -4068,6 +4069,7 @@ CmdParms=OBC:7
 CmdTranslator=Translator(lsb) 
 FixedData=FF FF 
 Code.S3C80=43 8B 21 8B 12 CF 44 08 08 01 21 03 30 01 21 00 FD D2 DC 11 94 08 B6 E4 05 06 60 06 20 11 F6 01 46 F6 01 0A 7B 01 AF 46 05 01 56 06 FE 46 29 01 8D 01 46 
+Code.HCS08=20 16 23 46 21 CF 44 08 08 01 21 03 44 01 21 01 11 D2 DC 11 94 08 CA 00 4E 62 63 33 63 6E 02 AA CD FF 5F CD FF 92 25 01 81 10 62 11 63 10 A3 CC FF 5F 
 Code.MAXQ610=33 69 21 0E 16 00 44 03 16 00 12 01 F0 D2 56 01 CA 08 40 80 04 15 D3 D2 01 62 44 44 70 71 72 F2 62 54 04 70 71 73 F3 
 Code.TI2541=01 07 01 21 21 0E 16 00 44 03 16 00 12 01 F0 D2 56 01 CA 08 40 80 04 15 05 04 01 62 44 44 70 71 72 F2 62 54 04 70 71 73 F3 
 Notes=This IR protocol is very similar to NEC2, except the OBCs are limited to the range 0-127 and the repeat behavior is different.  The second and additional frames of a repeating signal send the OBC + 128. 
@@ -5135,13 +5137,6 @@ PID=00 26
 Code.6805-C9=06 1A 01 20 10 A0 E0 00 84 00 07 0C F3 1D 01 0B 0B 00 01 01 08 CD 01 83 00 5A 07 A6 11 AE 0B CD 01 9F A6 9A B7 7C 1B 7B CD 01 83 81
 Code.HCS08=20 11 1C 42 01 84 03 00 08 06 05 12 23 06 05 2A 4E 00 00 CC FF 5F
 
-[pid: 00 29]
-PID=00 29
-Code.S3C80=52 C2 11 8B 0D 05 04 08 05 D9 00 00 00 00 05 C7 17 7A 60 03 60 04 F6 01 46 F6 01 46 F6 01 04 FB 0C C6 F8 AE 86 F6 01 58 F6 01 0A 7B E9 AF
-Code.740=10 26 11 80 0C 94 C0 10 55 04 08 00 00 04 D4 0E 5E 22 00 22 00 A2 D0 A0 75 22 44 22 09 B0 03 4C 03 FF 60
-Code.6805-C9=10 27 11 20 0C 94 C0 10 55 04 08 04 D1 04 44 0E 6C CD 01 83 CD 01 83 A6 6D AE 5B CD 01 9E CD 01 86 25 05 CD 01 8C 24 E9 81
-Code.6805-RC16/18=15 31 11 20 0B 05 04 08 02 00 ED 20 EC 00 0B C7 CD 01 AF CD 01 AF CD 01 83 25 09 AE 57 A6 44 CD 01 C1 24 EC 81
-
 [pid: 00 2B]
 PID=00 2B
 Code.S3C80=00 00 11 8B 14 81 59 05 05 00 0A 07 DA 00 0A 0B D6 17 D3 00 0A 17 D3 00 05 76 04 01 EB 03 F6 01 46 E6 28 84 8D 01 49
@@ -5640,7 +5635,6 @@ Code.S3C80=3F 84 31 8B 12 CF 4D 08 08 01 0A 00 F6 01 0A 03 0B C7 CB 10 AD 08 3E 
 Code.740=0A 18 31 80 15 E5 BE 01 16 08 08 01 9B 02 C7 62 9B 54 06 7C 02 08 63 F0 03 B5 E6 5B 4C 00 FF
 Code.6805-C9=0A 19 31 20 15 E5 FE 00 16 08 08 01 99 02 FC 30 6B 55 06 7D 02 08 77 11 03 B7 3C 58 CC 01 83
 Code.6805-RC16/18=10 22 31 20 10 CF 4D 08 08 00 84 85 01 84 90 63 F0 00 84 56 29 3C 58 B6 5D 43 B7 5E 3C_66 CC 01 AF
-Code.HCS08=20 15 21 43 31 CF 4D 08 08 00 FF 01 0A 00 FF 03 1F C7 DF 10 AC 08 52 3C AC 4E 63 64 33 64 3C A9 CC FF 5F
 Code.HCS08=20 15 21 43 31 CF 4D 08 08 00 FF 01 0A 00 FF 03 1F C7 DF 10 AC 08 52 3C AC 4E 63 64 33 64 3C A9 CC FF 5F
 
 [pid: 00 C6]
