--- a/protocols.ini
+++ b/protocols.ini
@@ -473,15 +473,34 @@ Code.TI2541=01 FA 00 21 11 18 14 00 14 00 14 00 3C 00 60 09 40 01 A0 00 00 00 00
 
 [Bang & Olafsen]
 PID=00 EB
-DevParms=D1=1,D2=128,D3=0
-DeviceTranslator=Translator(0,8,0) Translator(1,8,8) Translator(2,8,16)
-CmdParms=OBC1:8, OBC2
-CmdTranslator=Translator(0,8) Translator(1,8,8)
+DevParms=Device Hi:4=1,Device Lo=0, Num Hi Dev bits:3=1
+DeviceTranslator=BandOtranslator(0)
+CmdParms=OBC1:8=0, OBC2:8=0
+CmdTranslator=BandOtranslator(2)
 FixedData=01 80 00
 DefaultCmd=00 00
 Code.S3C80=07 07 32 8B 15 00 00 6C 05 95 00 6C 0B AB 00 6C 11 C1 00 6C 17 D7 00 6C 1D EA B0 C6 F6 FF 7E F6 FF 7E 1C 22 F6 01 4C B0 C3 48 03 58 04 F6 FF 66 58 05 F6 FF 64 58 06 F6 FF 64 F6 FF 7A 37 61 0F F6 FF 7A 3C 0E 1C 20 F6 01 6D 3A F9 E4 07 06 76 07 40 6B 0F F6 01 0A FB 04 77 61 8B BF 37 60 03 F6 FF 7A AF 4C 08 1C 16 90 C5 FB 08 1C 12 60 C3 EB 02 1C 1A F6 01 4C 4A ED AF 1C 1E 8B 02 1C 12 8D 01 4C
+Code.HCS08=20 18 04 05 32 00 00 6B 05 A9 00 6B 0B BF 00 6B 11 D5 00 6B 17 EB 00 6B 1D FE 3F 56 AD 5B AD 59 AE 7A AD 57 3F 53 4E 60 54 B6 61 AD 32 B6 62 AD 2B B6 63 AD 27 AD 3E 00 56 10 AD 39 6E 0E 53 AE 78 CD FF 83 3B 53 F8 4E 64 63 0D 64 0E CD FF 92 24 04 10 56 20 C6 01 56 02 AD 1A 81 6E 08 54 B7 55 AE 6E 39 55 24 08 AE 6A 33 53 26 02 AE 72 AD 0A 3B 54 ED 81 AE 76 20 02 AE 6A CC FF 65																			
 Code.MAXQ610=05 06 32 a2 00 90 64 00 3a 05 64 00 d9 0a 58 4b 01 00 64 00 3a 05 64 00 3a 05 64 00 b2 1b 00 00 64 00 16 16 64 00 78 10 02 41 40 01 5f c3 0c 00 40 58 10 df 00 00 5a 02 00 00 00 da d1 00 59 14 00 00 00 da d2 00 59 14 00 00 00 da d3 00 57 0c 00 00 00 c4 d0 00 57 08 00 00 10 c4 00 08 56 1c da 80 17 df df 01 56 0c df 01 5a 00 00 00 57 10 00 00 5a 70 00 06 57 08 00 00 5a 01 00 00 11 da da 01 58 dc c4 00 5d 00 00 00 00 c3 0c 40 40 04 59 a8 00 00 82 10 00 14 00 d3 d4 00 59 A0 00 00 5a 03 00 00 5b f8 54 00 5a 00 00 00 
 Code.TI2541=01 16 00 32 32 A2 00 90 63 00 26 05 63 00 AE 0A 39 46 01 00 63 00 26 05 63 00 26 05 63 00 44 1B 00 00 63 00 BF 15 63 00 36 10 02 41 40 01 5F C3 0C 00 40 58 10 11 00 00 5A 02 00 00 00 0C 03 00 59 14 00 00 00 0C 04 00 59 14 00 00 00 0C 05 00 57 0C 00 00 00 30 02 00 57 08 00 00 10 30 00 08 56 1C 0C 80 17 11 11 01 56 0C 11 01 5A 00 00 00 57 10 00 00 5A 70 00 06 57 08 00 00 5A 01 00 00 11 0C 0C 01 58 DC 30 00 5D 00 00 00 00 C3 0C 40 40 04 59 A8 00 00 82 10 00 14 00 05 06 00 59 A0 00 00 5A 03 00 00 5B F8 54 00 5A 00 00 00
+Notes=See http://www.hifi-remote.com/forums/viewtopic.php?t=12486 for help in assigning OBCs. B&O uses 9 or 12 device bits, described here as either 1 or 4 bits of Device  Hi, and 8 bits of Device Lo. \n\
+Nearly all B&O signals have 9 device bits, so typically Num Hi Bits should be set to 1.  Then only 0 or 1 are valid values for Device Hi. \n\
+This executor will send a single frame of OBC, and if OBC2 is in the range 64-127 or 192-255 (i.e. bit 6 is set), additional signals will be sent with OBC2. \n\ 
+OBCs are dependent on whether Device Lo is even or odd.  Be sure to have entered the desired Device Lo before entering OBCs.
+
+[Bang & Olafsen]
+PID=00 EB
+VariantName=4
+DevParms=Device Hi:4=1,Device Lo=0, Num Hi Dev bits:3=1,Repeat Mask:3=6
+DeviceTranslator=BandOtranslator(1)
+CmdParms=OBC:8=0
+CmdTranslator=BandOtranslator(3)
+FixedData=01 C0 80 00
+DefaultCmd=00
+Notes=See http://www.hifi-remote.com/forums/viewtopic.php?t=12486 for help in assigning OBCs.  B&O uses 9 or 12 device bits, described here as either 1 or 4 bits of Device  Hi, and 8 bits of Device Lo.  \n\
+The OBC will be repeated if the Repeat Mask exactly matches the 3 most significant bits of the OBC. \n\
+This executor doesn't handle IR signals for which a single frame of OBC is sent and repeats are a second OBC (Denoted D and H in the above link). \n\ 
+OBCs are dependent on whether Device Lo is even or odd.  Be sure to have entered the desired Device Lo before entering OBCs.
 
 [Barco]
 PID=00 2A
@@ -5765,13 +5784,6 @@ Code.S3C80=24 59 01 8B 0E 84 41 00 05 00 B7 05 77 00 B7 08 50 12 1A 8D 01 46
 Code.740=06 0A 01 80 0B A0 61 17 00 05 04 8A 06 6B 0A A6 4C 00 FF
 Code.6805-C9=08 09 01 20 0C A0 E1 00 19 00 05 04 87 06 69 0B 1A CC 01 83
 Code.HCS08=20 11 13 2E 01 84 41 00 05 00 B6 05 8B 00 B6 08 64 12 2E CC FF 5F
-
-[pid: 00 EB]
-PID=00 EB
-Code.S3C80=07 09 41 8B 15 00 00 6C 05 95 00 6C 0B AB 00 6C 11 C1 00 6C 17 D7 00 6C 1D EA B0 C4 F6 FF 78 F6 FF 78 1C 22 F6 01 4C B0 C3 68 03 58 05 F6 FF 60 58 06 F6 FF 5E 58 07 F6 FF 5E F6 FF 74 37 41 0E F6 FF 74 3C 0E 1C 20 F6 01 6D 3A F9 60 C4 08 07 56 C0 E0 B4 04 C0 EB 05 F6 01 0A 7B BF AF 6C 08 1C 16 90 C5 FB 08 1C 12 60 C3 EB 02 1C 1A F6 01 4C 6A ED AF 1C 1E 8B 02 1C 12 8D 01 4C
-Code.740=00 00 41 22 67 3C 00 58 3C 00 57 20 B5 01 20 B5 01 20 B5 01 A2 24 A0 11 22 44 22 1F A5 5F 85 55 20 84 01 A5 60 85 55 A5 61 85 56 3C 11 54 20 84 01 A2 14 A0 09 22 44 20 AA 01 07 58 06 A2 6D A0 EF 22 44 A5 61 29 E0 45 5E D0 04 22 06 90 B9 4C 6C FF 20 AA 01 06 56 26 55 90 12 A2 B9 A0 04 22 44 44 57 D0 0E A2 13 A0 09 22 44 80 06 A2 C4 A0 08 22 44 C6 54 D0 DB 60 22 5C A2 46 A0 01 22 44 4C 5F FF 20 AA 01 A2 C2 A0 04 22 44 60
-Code.6805-RC16/18=00 02 35 D5 05 35 E0 08 35 EB 0B 35 F6 0F 35 00 3F 53 AD 58 3F 52 5F B6 5A BF 54 B7 51 E6 5C B7 50 AE 03 0F 50 07 5F 33 52 26 02 AE 06 AD 3A 38 50 3A 51 26 EC A6 08 BE 54 5C A3 03 26 DB AD 27 0E 53 0D AD 22 11 14 A6 FB AE 60 CD 01 96 1E 53 B6 5E A4 E0 B8 5B 26 0E CD 01 89 25 04 1C 53 20 B1 0D 53 02 AD 06 81 AE 09 CC 01 CA 5F AD FA AD F8 AE 0C AD F4 81
-Code.HCS08=20 18 04 05 41 00 00 6B 05 A9 00 6B 0B BF 00 6B 11 D5 00 6B 17 EB 00 6B 1D FE 3F 56 AD 59 AD 57 AE 7A CD FF 65 3F 53 4E 60 54 4E 62 55 AD 2F 4E 63 55 AD 27 4E 64 55 AD 22 AD 38 00 56 0F AD 33 6E 0E 53 AE 78 CD FF 83 3B 53 F8 33 56 B6 64 A4 E0 B8 61 26 05 CD FF 92 25 C2 81 6E 08 54 AE 6E 39 55 24 08 AE 6A 33 53 26 02 AE 72 CD FF 65 3B 54 EC 81 AE 76 20 02 AE 6A CC FF 65
 
 [pid: 00 EC]
 PID=00 EC
